--- a/css/main.css
+++ b/css/main.css
@@ -2,4 +2,51 @@
   box-sizing: border-box;
 }
 
+.header__logo {
+  text-align: center;
+}
+.header__logo img {
+  width: 50%;
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  background-color: #535353;
+}
+footer h1 {
+  margin-left: 40px;
+  margin-top: 20px;
+}
+footer ul {
+  list-style-type: none;
+}
+footer ul li {
+  margin-bottom: 5px;
+}
+footer ul i {
+  font-size: 10px;
+  padding-right: 10px;
+}
+
+a {
+  text-decoration: none;
+}
+
+* {
+  font-family: "Roboto", sans-serif;
+}
+
+footer a, footer h1 {
+  color: white;
+}
+
+h1 {
+  font-family: "Shrikhand", sans-serif;
+  font-size: 18px;
+  margin-bottom: 0;
+}
+
 /*# sourceMappingURL=main.css.map */
