--- a/sass/Base/_base.scss
+++ b/sass/Base/_base.scss
@@ -1,3 +1,36 @@
 * {
     box-sizing: border-box;
 }
+
+.header__logo {
+    text-align: center;
+    img {
+        width: 50%;
+        margin-top: 30px;
+        margin-bottom: 20px;
+    }
+}
+
+footer {
+    display: flex;
+    flex-direction: column;
+    background-color: $color-footer-bg;
+        h1{
+            margin-left: 40px;
+            margin-top: 20px;
+    }
+    ul {
+        list-style-type: none;
+        li {
+            margin-bottom: 5px;
+        }
+        i {
+            font-size: 10px;
+            padding-right: 10px;
+        }
+    }
+}
+
+a{
+    text-decoration: none;
+}
