CSS Acceuil, HTML Menus

--- a/sass/Base/_base.scss
+++ b/sass/Base/_base.scss
@@ -6,8 +6,8 @@
     text-align: center;
     img {
         width: 50%;
-        margin-top: 30px;
-        margin-bottom: 20px;
+        margin-top: 20px;
+        margin-bottom: 10px;
     }
 }
 
@@ -33,4 +33,5 @@ footer {
 
 a{
     text-decoration: none;
+    color: black;
 }
