--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,7 @@
 @import "./Utils/variables";
 @import "./Base/base";
 @import "./Utils/typology";
+@import "./Utils/mixin";
+@import "./Pages/menus.scss";
+@import "./Pages/acceuil.scss";
+@import "./Composants/buttons";
