--- a/css/main.css
+++ b/css/main.css
@@ -7,8 +7,8 @@
 }
 .header__logo img {
   width: 50%;
-  margin-top: 30px;
-  margin-bottom: 20px;
+  margin-top: 20px;
+  margin-bottom: 10px;
 }
 
 footer {
@@ -33,20 +33,195 @@ footer ul i {
 
 a {
   text-decoration: none;
+  color: black;
 }
 
 * {
   font-family: "Roboto", sans-serif;
 }
 
-footer a, footer h1 {
-  color: white;
+.location {
+  font-weight: 400;
 }
 
 h1 {
   font-family: "Shrikhand", sans-serif;
   font-size: 18px;
   margin-bottom: 0;
+}
+
+h2 {
+  font-size: 24px;
+}
+
+h3 {
+  font-size: 18px;
+  font-weight: 300;
+}
+
+footer a, footer h1 {
+  color: white;
+}
+
+.header__logo {
+  position: relative;
+}
+.header__logo__arrow {
+  position: absolute;
+  font-size: 20px;
+  left: 5%;
+  top: 40%;
+}
+
+.location {
+  background-color: #e9e9e9;
+  text-align: center;
+  border-top: 3px solid #d0d0d0;
+  box-shadow: inset 0 3px 3px #dddddd;
+  padding: 15px;
+}
+.location i {
+  margin-right: 10px;
+}
+
+.explore {
+  background-color: rgb(246, 246, 246);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 20px;
+  padding-bottom: 60px;
+}
+.explore h2 {
+  width: 60%;
+  text-align: center;
+}
+.explore h3 {
+  width: 80%;
+  text-align: center;
+  margin-top: 0;
+  margin-bottom: 30px;
+}
+
+.functionment {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.functionment__title {
+  margin-left: 5%;
+  margin-top: 40px;
+  margin-bottom: 30px;
+}
+.functionment__indication {
+  width: 80%;
+  position: relative;
+  background-color: rgb(246, 246, 246);
+  display: flex;
+  padding: 30px;
+  margin-bottom: 20px;
+  border-radius: 20px;
+  box-shadow: 2px 2px 10px #aaaaaa;
+}
+.functionment__indication__number {
+  position: absolute;
+  background-color: #9356DC;
+  padding: 5px 10px 5px 10px;
+  border-radius: 50%;
+  top: 30%;
+  left: -15px;
+  color: white;
+}
+.functionment__indication i {
+  padding-right: 20px;
+  padding-left: 10px;
+}
+
+#indication__colored {
+  background-color: #f2eafb;
+}
+
+.restaurants {
+  background-color: rgb(246, 246, 246);
+  padding-top: 30px;
+  padding-bottom: 50px;
+  margin-top: 50px;
+}
+.restaurants h2 {
+  margin-left: 5%;
+}
+
+.rcard {
+  display: flex;
+  flex-direction: column;
+  height: 200px;
+  width: 90%;
+  margin: auto;
+  margin-bottom: 15px;
+  border-radius: 15px;
+  box-shadow: 2px 2px 10px #aaaaaa;
+}
+.rcard__image {
+  position: relative;
+  display: flex;
+  width: 100%;
+  overflow: hidden;
+  border-radius: 15px 15px 0 0;
+}
+.rcard__image img {
+  object-fit: cover;
+  width: 100%;
+}
+.rcard__image__new {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 12px;
+  font-weight: 600;
+  background-color: #99E2D0;
+  color: #278870;
+  padding: 5px 7px 5px 7px;
+}
+.rcard__body {
+  display: flex;
+  justify-content: space-between;
+}
+.rcard__body__infos {
+  padding: 10px;
+}
+.rcard__body__infos__name {
+  font-weight: 600;
+  padding-bottom: 3px;
+  font-size: 14px;
+}
+.rcard__body__infos__location {
+  font-weight: 400;
+  font-size: 12px;
+}
+.rcard__body__heart {
+  padding: 15px 20px 0 0;
+  position: relative;
+}
+.rcard__body__heart__full {
+  position: absolute;
+  top: 28.5%;
+  color: #9356DC;
+  transform: scale(0);
+  transition: transform 400ms;
+}
+.rcard__body__heart:hover {
+  color: #9356DC;
+}
+.rcard__body__heart:hover > .rcard__body__heart__full {
+  transform: scale(1);
+}
+
+.btn {
+  color: white;
+  background: linear-gradient(to bottom right, #FF79DA, #9356DC);
+  padding: 20px;
+  border-radius: 28px;
+  box-shadow: 2px 2px 10px #aaaaaa;
 }
 
 /*# sourceMappingURL=main.css.map */
