--- a/sass/Utils/_variables.scss
+++ b/sass/Utils/_variables.scss
@@ -2,4 +2,5 @@ $color-primary : #9356DC;
 $color-secondary : #FF79DA;
 $color-tertiary : #99E2D0;
 $color-footer-bg : #535353;
-$color-footer : white;
+$color-white : white;
+$color-grey : rgb(246,246,246);
