--- a/sass/Pages/_menus.scss
+++ b/sass/Pages/_menus.scss
@@ -8,3 +8,102 @@
         
     }
 }
+
+.image-bg {
+    width: 50%;
+    height: 200px;
+    overflow: hidden;
+    img {
+        width: 100%;
+        object-fit: cover;
+    }
+}
+
+.menu {
+    border-radius: 10px;
+    background-color: $color-grey;
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+    width: 100%;
+    padding: 20px;
+    &__title {
+        display: flex;
+        width: 100%;
+        justify-content: space-between;
+        margin-bottom: 30px;
+    }
+    &__type__title {
+        font-weight: 300;
+        text-transform: uppercase;
+        font-size: 18px;
+        margin-top: 30px;
+    }
+}
+
+.menu__type {
+    width: 100%;
+}
+
+.dish {
+    background-color: $color-white;
+    margin-bottom: 15px;
+    padding-left: 10px;
+    width: 100%;
+    height: 80px;
+    border-radius: 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    @include shadow_grey;
+    &__infos {
+        display: flex;
+        flex-direction: column;
+        width: 150px;
+        text-overflow: ellipsis;
+        &__title {
+            font-weight: bold;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+        }
+        &__description {
+            font-weight: 300;
+        }
+    }
+    &__price {
+        font-weight: bold;
+    }
+    &__checked {
+        width: 80px;
+        height: 100%;
+        border-radius: 0 15px 15px 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color:$color-tertiary;
+        background-color: $color-tertiary;
+        transform-origin: right;
+        transform: scaleX(0);
+        transition: transform 800ms;
+        i { 
+            border-radius: 100%;
+            border: 0px;
+            transform: rotate(0deg);
+            transition: transform 1s;
+            background-color: white;
+        }
+    }
+    &:active > &__checked {
+        transform: scaleX(1); 
+        i {
+            transform: rotate(4turn);
+        } 
+    }
+}
+
+.border {
+    width: 50px;
+    height: 2px;
+    border: solid 2px $color-tertiary;
+    margin: 2px 0 15px 0;
+}
