CSS Checkbox, MenuApparition

--- a/sass/Utils/_variables.scss
+++ b/sass/Utils/_variables.scss
@@ -4,3 +4,9 @@ $color-tertiary : #99E2D0;
 $color-footer-bg : #535353;
 $color-white : white;
 $color-grey : rgb(246,246,246);
+
+$timing-check : 0.5s;
+$apparition-duration : 1s;
+
+$nbrmax__dishes : 10;
+$anim-delay : 0.6s;
