--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@
 }
 .header__logo img {
   width: 50%;
+  height: 50px;
   margin-top: 20px;
   margin-bottom: 10px;
 }
@@ -63,6 +64,14 @@ footer a, footer h1 {
   color: white;
 }
 
+@keyframes menu-apparition {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 .header__logo {
   position: relative;
 }
@@ -71,6 +80,172 @@ footer a, footer h1 {
   font-size: 20px;
   left: 5%;
   top: 40%;
+}
+
+.image-bg {
+  width: 50%;
+  height: 200px;
+  overflow: hidden;
+}
+.image-bg img {
+  width: 100%;
+  object-fit: cover;
+}
+
+.menu {
+  border-radius: 10px;
+  background-color: rgb(246, 246, 246);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  padding: 20px;
+}
+.menu__title {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  margin-bottom: 30px;
+}
+.menu__type__title {
+  font-weight: 300;
+  text-transform: uppercase;
+  font-size: 18px;
+  margin-top: 30px;
+}
+
+.menu__type {
+  width: 100%;
+}
+
+.dish {
+  background-color: white;
+  margin-bottom: 15px;
+  padding-left: 10px;
+  width: 100%;
+  height: 60px;
+  border-radius: 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  overflow: hidden;
+  opacity: 1;
+  animation: menu-apparition 1s;
+  box-shadow: 2px 2px 10px #aaaaaa;
+}
+.dish__infos {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin-right: 20px;
+  width: 100%;
+  transition: width 0.5s;
+}
+.dish__infos__text {
+  width: 80%;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  display: flex;
+  flex-direction: column;
+}
+.dish__infos__text__title {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  font-weight: bold;
+  margin-bottom: 4px;
+  margin-top: 3px;
+}
+.dish__infos__text__description {
+  font-weight: 300;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+.dish__infos__price {
+  font-weight: bold;
+  width: 20%;
+  margin-left: 10%;
+  text-align: right;
+}
+.dish__checked {
+  height: 100%;
+  width: 0%;
+  border-radius: 0 15px 15px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #99E2D0;
+  background-color: #99E2D0;
+  overflow: hidden;
+  transform: translate(100%);
+  transition: transform 0.5s, width 0.5s;
+}
+.dish__checked i {
+  border-radius: 100%;
+  border: 0px;
+  transform: rotate(0deg);
+  transition: transform 1s;
+  background-color: white;
+}
+.dish:hover > .dish__checked {
+  width: 20%;
+  transform: translate(0);
+}
+.dish:hover > .dish__checked i {
+  transform: rotate(4turn);
+}
+.dish:hover > .dish__infos {
+  width: 80%;
+}
+
+.border {
+  width: 50px;
+  height: 2px;
+  border: solid 2px #99E2D0;
+  margin: 2px 0 15px 0;
+}
+
+#dish-1 {
+  animation-duration: 0.6s;
+}
+
+#dish-2 {
+  animation-duration: 1.2s;
+}
+
+#dish-3 {
+  animation-duration: 1.8s;
+}
+
+#dish-4 {
+  animation-duration: 2.4s;
+}
+
+#dish-5 {
+  animation-duration: 3s;
+}
+
+#dish-6 {
+  animation-duration: 3.6s;
+}
+
+#dish-7 {
+  animation-duration: 4.2s;
+}
+
+#dish-8 {
+  animation-duration: 4.8s;
+}
+
+#dish-9 {
+  animation-duration: 5.4s;
+}
+
+#dish-10 {
+  animation-duration: 6s;
 }
 
 .location {
