--- a/sass/Base/_base.scss
+++ b/sass/Base/_base.scss
@@ -6,6 +6,7 @@
     text-align: center;
     img {
         width: 50%;
+        height: 50px;
         margin-top: 20px;
         margin-bottom: 10px;
     }
