--- a/sass/Pages/_menus.scss
+++ b/sass/Pages/_menus.scss
@@ -50,41 +50,65 @@
     margin-bottom: 15px;
     padding-left: 10px;
     width: 100%;
-    height: 80px;
+    height: 60px;
     border-radius: 15px;
     display: flex;
     justify-content: space-between;
-    align-items: flex-end;
+    align-items: center;
+    overflow: hidden;
+    opacity: 1;
+    animation : menu-apparition $apparition-duration;
     @include shadow_grey;
     &__infos {
         display: flex;
-        flex-direction: column;
-        width: 150px;
-        text-overflow: ellipsis;
-        &__title {
-            font-weight: bold;
-            white-space: nowrap;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: flex-end;
+        margin-right: 20px;
+        width: 100%;
+        transition: width $timing-check;
+        &__text {
+            width: 80%;
             text-overflow: ellipsis;
+            overflow: hidden;
+            white-space: nowrap;
+            display: flex;
+            flex-direction: column;
+            &__title {
+                text-overflow: ellipsis;
+                overflow: hidden;
+                white-space: nowrap;
+                font-weight: bold;
+                margin-bottom: 4px;
+                margin-top: 3px;
+            }
+            &__description {
+                font-weight: 300;
+                text-overflow: ellipsis;
+                overflow: hidden;
+                white-space: nowrap;
+            }
         }
-        &__description {
-            font-weight: 300;
+        &__price {
+            font-weight: bold;
+            width: 20%;
+            margin-left: 10%;
+            text-align: right;
         }
     }
-    &__price {
-        font-weight: bold;
-    }
+    
     &__checked {
-        width: 80px;
         height: 100%;
+        width: 0%;
         border-radius: 0 15px 15px 0;
         display: flex;
         justify-content: center;
         align-items: center;
         color:$color-tertiary;
         background-color: $color-tertiary;
-        transform-origin: right;
-        transform: scaleX(0);
-        transition: transform 800ms;
+        overflow : hidden;
+        transform: translate(100%);
+        transition: transform $timing-check, width $timing-check;
         i { 
             border-radius: 100%;
             border: 0px;
@@ -93,11 +117,15 @@
             background-color: white;
         }
     }
-    &:active > &__checked {
-        transform: scaleX(1); 
+    &:hover > &__checked {
+        width: 20%;
+        transform: translate(0); 
         i {
             transform: rotate(4turn);
         } 
+    }
+    &:hover >&__infos {
+        width: 80%;
     }
 }
 
@@ -106,4 +134,11 @@
     height: 2px;
     border: solid 2px $color-tertiary;
     margin: 2px 0 15px 0;
+}
+
+
+@for $i from 1 through $nbrmax__dishes {
+    #dish-#{$i} {
+        animation-duration: $anim-delay*$i;
+    }
 }
