--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,7 +2,7 @@
 @import "./Base/base";
 @import "./Utils/typology";
 @import "./Utils/mixin";
-@import "./Utils/functions";
+@import "./Utils/animations";
 @import "./Pages/menus.scss";
 @import "./Pages/acceuil.scss";
 @import "./Composants/buttons";
