--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,10 @@
   box-sizing: border-box;
 }
 
+header {
+  height: 85px;
+}
+
 .header__logo {
   text-align: center;
 }
@@ -14,6 +18,8 @@
 
 footer {
   display: flex;
+  z-index: 1;
+  width: 100%;
   flex-direction: column;
   background-color: #535353;
 }
@@ -47,12 +53,12 @@ a {
 
 h1 {
   font-family: "Shrikhand", sans-serif;
-  font-size: 18px;
   margin-bottom: 0;
 }
 
 h2 {
   font-size: 24px;
+  margin-bottom: 10px;
 }
 
 h3 {
@@ -64,12 +70,63 @@ footer a, footer h1 {
   color: white;
 }
 
+footer h1 {
+  font-size: 18px;
+}
+
 @keyframes menu-apparition {
   0% {
     opacity: 0;
   }
   100% {
     opacity: 1;
+  }
+}
+@keyframes progress-bar {
+  0% {
+    transform: scaleX(0);
+    opacity: 0.1;
+  }
+  32% {
+    transform: scaleX(0.4);
+    opacity: 0.5;
+  }
+  54% {
+    transform: scaleX(0.6);
+  }
+  73% {
+    transform: scaleX(0.8);
+    opacity: 0.8;
+  }
+  100% {
+    transform: scaleX(1);
+  }
+}
+@keyframes text-opacity {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.01;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes main-apparition {
+  0% {
+    transform: translate(-9999px);
+  }
+  100% {
+    transform: translate(0);
+  }
+}
+@keyframes loader-disparition {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
   }
 }
 .header__logo {
@@ -83,8 +140,11 @@ footer a, footer h1 {
 }
 
 .image-bg {
-  width: 50%;
-  height: 200px;
+  width: 100%;
+  height: 250px;
+  position: absolute;
+  display: flex;
+  justify-content: center;
   overflow: hidden;
 }
 .image-bg img {
@@ -93,35 +153,41 @@ footer a, footer h1 {
 }
 
 .menu {
-  border-radius: 10px;
+  position: absolute;
+  top: 305px;
+  border-radius: 30px;
   background-color: rgb(246, 246, 246);
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
   padding: 20px;
+  padding-bottom: 100px;
 }
 .menu__title {
   display: flex;
   width: 100%;
+  font-size: 13px;
   justify-content: space-between;
+  align-items: baseline;
   margin-bottom: 30px;
+}
+.menu__title__heart {
+  font-size: 30px;
 }
 .menu__type__title {
   font-weight: 300;
   text-transform: uppercase;
-  font-size: 18px;
-  margin-top: 30px;
+  font-size: 15px;
 }
-
 .menu__type {
   width: 100%;
+  margin-bottom: 30px;
 }
 
 .dish {
   background-color: white;
   margin-bottom: 15px;
-  padding-left: 10px;
   width: 100%;
   height: 60px;
   border-radius: 15px;
@@ -131,14 +197,14 @@ footer a, footer h1 {
   overflow: hidden;
   opacity: 1;
   animation: menu-apparition 1s;
-  box-shadow: 2px 2px 10px #aaaaaa;
+  box-shadow: 1px 4px 10px #dddddd;
 }
 .dish__infos {
   display: flex;
+  padding: 0 3% 0 3%;
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-end;
-  margin-right: 20px;
   width: 100%;
   transition: width 0.5s;
 }
@@ -171,9 +237,9 @@ footer a, footer h1 {
   text-align: right;
 }
 .dish__checked {
-  height: 100%;
+  height: 110%;
   width: 0%;
-  border-radius: 0 15px 15px 0;
+  border-radius: 0 10px 10px 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -200,52 +266,65 @@ footer a, footer h1 {
 .dish:hover > .dish__infos {
   width: 80%;
 }
+.dish:hover {
+  cursor: pointer;
+}
 
 .border {
-  width: 50px;
+  width: 40px;
   height: 2px;
   border: solid 2px #99E2D0;
-  margin: 2px 0 15px 0;
+  margin: 6px 0 15px 0;
 }
 
 #dish-1 {
-  animation-duration: 0.6s;
+  animation-fill-mode: backwards;
+  animation-delay: 0.2s;
 }
 
 #dish-2 {
-  animation-duration: 1.2s;
+  animation-fill-mode: backwards;
+  animation-delay: 0.4s;
 }
 
 #dish-3 {
-  animation-duration: 1.8s;
+  animation-fill-mode: backwards;
+  animation-delay: 0.6s;
 }
 
 #dish-4 {
-  animation-duration: 2.4s;
+  animation-fill-mode: backwards;
+  animation-delay: 0.8s;
 }
 
 #dish-5 {
-  animation-duration: 3s;
+  animation-fill-mode: backwards;
+  animation-delay: 1s;
 }
 
 #dish-6 {
-  animation-duration: 3.6s;
+  animation-fill-mode: backwards;
+  animation-delay: 1.2s;
 }
 
 #dish-7 {
-  animation-duration: 4.2s;
+  animation-fill-mode: backwards;
+  animation-delay: 1.4s;
 }
 
 #dish-8 {
-  animation-duration: 4.8s;
+  animation-fill-mode: backwards;
+  animation-delay: 1.6s;
 }
 
 #dish-9 {
-  animation-duration: 5.4s;
+  animation-fill-mode: backwards;
+  animation-delay: 1.8s;
 }
 
 #dish-10 {
-  animation-duration: 6s;
+  animation-fill-mode: backwards;
+  animation-delay: 2s;
 }
 
 .location {
@@ -290,13 +369,14 @@ footer a, footer h1 {
 }
 .functionment__indication {
   width: 80%;
+  font-weight: 600;
   position: relative;
   background-color: rgb(246, 246, 246);
   display: flex;
   padding: 30px;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
   border-radius: 20px;
-  box-shadow: 2px 2px 10px #aaaaaa;
+  box-shadow: 1px 4px 10px #dddddd;
 }
 .functionment__indication__number {
   position: absolute;
@@ -334,7 +414,7 @@ footer a, footer h1 {
   margin: auto;
   margin-bottom: 15px;
   border-radius: 15px;
-  box-shadow: 2px 2px 10px #aaaaaa;
+  box-shadow: 1px 4px 10px #dddddd;
 }
 .rcard__image {
   position: relative;
@@ -391,12 +471,63 @@ footer a, footer h1 {
   transform: scale(1);
 }
 
+.loader {
+  position: absolute;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background: rgb(246, 246, 246);
+  animation: loader-disparition 0s 3000ms forwards;
+}
+.loader__text {
+  font-family: "Shrikhand", sans-serif;
+  font-size: 30px;
+  margin-bottom: 15px;
+  color: black;
+  opacity: 0;
+  animation: text-opacity 2000ms backwards infinite;
+}
+.loader__progress {
+  border: solid 1px #9356DC;
+  height: 15px;
+  width: 60%;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.loader__progress__bar {
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to bottom right, #FF79DA, #9356DC);
+  border-radius: 10px;
+  transform-origin: left;
+  transform: scale(0);
+  animation: progress-bar 2000ms 1s;
+}
+
+.bloc-page {
+  animation: main-apparition 0s 3000ms;
+  animation-fill-mode: backwards;
+}
+
 .btn {
   color: white;
+  width: 220px;
+  text-align: center;
   background: linear-gradient(to bottom right, #FF79DA, #9356DC);
-  padding: 20px;
+  padding: 15px 10px 15px 10px;
   border-radius: 28px;
-  box-shadow: 2px 2px 10px #aaaaaa;
+  box-shadow: 1px 4px 4px #c3c3c3;
+}
+.btn:hover {
+  background: linear-gradient(to bottom right, #ff88de, #9b63df);
+  cursor: pointer;
+  box-shadow: 1px 4px 4px #909090;
 }
 
 /*# sourceMappingURL=main.css.map */
