--- a/sass/Utils/_mixin.scss
+++ b/sass/Utils/_mixin.scss
@@ -1,3 +1,3 @@
-@mixin shadow_grey {
-    box-shadow: 2px 2px 10px darken($color-grey, 30%);
+@mixin shadow_grey ($percentage:10%, $fade:10px) {
+    box-shadow: 1px 4px $fade darken($color-grey, $percentage);
 }
