--- a/sass/Utils/_typology.scss
+++ b/sass/Utils/_typology.scss
@@ -8,12 +8,12 @@
 
 h1 {
     font-family: "Shrikhand", sans-serif;
-    font-size: 18px;
     margin-bottom: 0;
 }
 
 h2 {
     font-size: 24px;
+    margin-bottom:10px;
 }
 
 h3 {
@@ -23,4 +23,8 @@ h3 {
 
 footer a, footer h1 {
     color: $color-white;
+}
+
+footer h1 {
+    font-size: 18px;
 }
