--- a/sass/Pages/_acceuil.scss
+++ b/sass/Pages/_acceuil.scss
@@ -1,9 +1,58 @@
+.loader {
+    position: absolute;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background: $color-grey;
+    animation: loader-disparition 0s ($duration-loader+$delay-loader) forwards;
+    &__text {
+        font-family:"Shrikhand", sans-serif ;
+        font-size: 30px;
+        margin-bottom: 15px;
+        color: black;
+        opacity: 0;
+        animation:text-opacity $duration-loader backwards infinite;
+    }
+    &__progress {
+        border : solid 1px $color-primary;
+        height: 15px;
+        width : 60%;
+        border-radius: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        &__bar {
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(to bottom right, $color-secondary,$color-primary);
+            border-radius: 10px;
+            transform-origin: left;
+            transform: scale(0);
+            animation: progress-bar $duration-loader 1s;
+        }
+    }
+}
+
+.bloc-page {
+    animation : main-apparition 0s ($duration-loader+$delay-loader);
+    animation-fill-mode: backwards;
+}
+
 .location {
     background-color: darken($color-grey,5%);
     text-align: center;
     border-top: 3px solid darken($color-grey,15%);
     box-shadow: inset 0 3px 3px darken($color-grey,10%);
     padding: 15px;
+    @include desktop {
+        width: 80%;
+        margin: auto;
+        border-radius: 10px 10px 0 0;
+    }
     i {
         margin-right: 10px;
     }
@@ -16,6 +65,12 @@
     align-items: center;
     padding-top: 20px;
     padding-bottom: 60px;
+    @include desktop {
+        width: 80%;
+        margin: auto;
+        border-radius: 0px 0px 15px 15px;
+        @include shadow_grey;
+    }
     h2 {
         width: 60%;
         text-align: center;
@@ -32,10 +87,21 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    @include desktop {
+        flex-direction: row;
+        width: 80%;
+        margin: auto;
+    }
     &__title {
         margin-left: 5% ;
         margin-top: 40px;
         margin-bottom: 30px;
+        @include desktop {
+            width: 80%;
+            margin: auto;
+            margin-top: 40px;
+            margin-bottom: 40px;
+        }
     }
     &__indication {
         width: 80%;
@@ -43,10 +109,16 @@
         position: relative;
         background-color: $color-grey;
         display: flex;
+        align-items: center;
         padding: 30px;
         margin-bottom: 30px;
         border-radius: 20px;
         @include shadow_grey;
+        @include desktop {
+            width: 30%;
+            margin: auto;
+            height: 80px;
+        }
         &__number {
             position: absolute;
             background-color: $color-primary;
@@ -72,8 +144,43 @@
     padding-top: 30px;
     padding-bottom: 50px;
     margin-top: 50px;
+    @include desktop {
+        width: 80%;
+        margin: auto;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin-top: 100px;
+        margin-bottom: 80px;
+        border-radius: 20px;
+        @include shadow_grey;
+    }
+    @include tablet {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin-top: 50px;
+        margin-bottom: 80px;
+    }
     h2 {
         margin-left: 5%;
+        margin-bottom: 20px;
+        width: 100%;
+    }
+    a {
+        @include desktop {
+            width: 40%;
+            margin: 5%;
+            height: 200px;
+        }
+        @include tablet {
+            width: 40%;
+            margin: 5%;
+            height: 200px;
+        }  
     }
 }
 
@@ -125,15 +232,18 @@
         &__heart { 
             padding : 15px 20px 0 0;
             position: relative;
+            transform: scale(1);
+            transition : transform 400ms 100ms;
             &__full {
                 position: absolute;
                 top:28.5%;
-                color: $color-primary;
+                @include color-heart;
                 transform : scale(0);
                 transition : transform 400ms;
             }
             &:hover {
                 color: $color-primary;
+                transform: scale(1.2);
             }
             &:hover > &__full{
                 transform: scale(1);
@@ -141,48 +251,4 @@
             
         }
     }
-}
-
-.loader {
-    position: absolute;
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    background: $color-grey;
-    animation: loader-disparition 0s ($duration-loader+$delay-loader) forwards;
-    &__text {
-        font-family:"Shrikhand", sans-serif ;
-        font-size: 30px;
-        margin-bottom: 15px;
-        color: black;
-        opacity: 0;
-        animation:text-opacity $duration-loader backwards infinite;
-    }
-    &__progress {
-        border : solid 1px $color-primary;
-        height: 15px;
-        width : 60%;
-        border-radius: 10px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        &__bar {
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(to bottom right, $color-secondary,$color-primary);
-            border-radius: 10px;
-            transform-origin: left;
-            transform: scale(0);
-            animation: progress-bar $duration-loader 1s;
-        }
-    }
-}
-
-.bloc-page {
-    animation : main-apparition 0s ($duration-loader+$delay-loader);
-    animation-fill-mode: backwards;
 }
