--- a/sass/Pages/_menus.scss
+++ b/sass/Pages/_menus.scss
@@ -1,3 +1,10 @@
+@for $i from 1 through $nbrmax__dishes {
+    #dish-#{$i} {
+        animation-fill-mode: backwards;
+        animation-delay: $anim-delay*$i;
+    }
+}
+
 .header__logo {
     position: relative;
     &__arrow {
@@ -5,14 +12,12 @@
         font-size: 20px;
         left: 5%;
         top: 40%;
-        
     }
 }
 
 .image-bg {
     width: 100%;
     height: $height-image;
-    position: absolute;
     display: flex;
     justify-content: center;
     overflow: hidden;
@@ -23,16 +28,23 @@
 }
 
 .menu {
-    position: absolute;
-    top : ($height-image+$height-header)-30px;
-    border-radius: 30px;
+    border-radius: 20px;
     background-color: $color-grey;
     display: flex;
     flex-direction: column;
     align-items:center;
     width: 100%;
+    margin-top: -20px;
+    overflow: visible;
     padding: 20px;
     padding-bottom: 100px;
+    @include desktop {
+        width: 80%;
+        margin: auto;
+        margin-top: 50px;
+        margin-bottom : 50px;
+        @include shadow_grey;
+    }
     &__title {
         display: flex;
         width: 100%;
@@ -42,12 +54,23 @@
         margin-bottom: 30px;
         &__heart {
             font-size: 30px;
+            margin-left: 10px;
         }
     }
     &__type__title {
         font-weight: 300;
         text-transform: uppercase;
         font-size: 15px;
+        @include desktop {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        @include tablet {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
     }
     &__type {
         width: 100%;
@@ -68,6 +91,10 @@
     opacity: 1;
     animation : menu-apparition $apparition-duration;
     @include shadow_grey;
+    @include desktop {
+        width: 80%;
+        margin: 10px 10% 20px 10%;
+    }
     &__infos {
         display: flex;
         padding : 0 3% 0 3%;
@@ -146,12 +173,13 @@
     height: 2px;
     border: solid 2px $color-tertiary;
     margin: 6px 0 15px 0;
-}
-
-@for $i from 1 through $nbrmax__dishes {
-    #dish-#{$i} {
-        animation-fill-mode: backwards;
-        animation-delay: $anim-delay*$i;
+    @include desktop {
+        width: 100px;
+    }
+    @include tablet {
+        width: 100px;
     }
 }
+
+
 
