--- a/sass/Utils/_animations.scss
+++ b/sass/Utils/_animations.scss
@@ -42,10 +42,10 @@
 
 @keyframes  main-apparition {
     0% {
-        transform : translate(-9999px);
+        transform : scale(0);
     }
     100% { 
-        transform: translate(0);
+        transform: scale(1);
     }
 }
 
