--- a/css/main.css
+++ b/css/main.css
@@ -207,23 +207,26 @@ footer h1 {
 }
 
 .menu {
-  border-radius: 20px;
+  position: relative;
+  top: -40px;
+  margin-bottom: -40px;
+  border-radius: 30px;
   background-color: rgb(246, 246, 246);
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
-  margin-top: -20px;
   overflow: visible;
   padding: 20px;
   padding-bottom: 100px;
 }
 @media all and (min-width: 992px) {
   .menu {
-    width: 80%;
+    width: 90%;
     margin: auto;
-    margin-top: 50px;
+    margin-top: 90px;
     margin-bottom: 50px;
+    padding-top: 50px;
     box-shadow: 1px 4px 10px #dddddd;
   }
 }
@@ -234,6 +237,11 @@ footer h1 {
   justify-content: space-between;
   align-items: baseline;
   margin-bottom: 30px;
+}
+@media all and (min-width: 992px) {
+  .menu__title {
+    width: 90%;
+  }
 }
 .menu__title__heart {
   font-size: 30px;
@@ -258,9 +266,36 @@ footer h1 {
     align-items: center;
   }
 }
+.menu__types {
+  width: 100%;
+}
+@media all and (min-width: 992px) {
+  .menu__types {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 40px;
+    margin-bottom: 40px;
+  }
+}
 .menu__type {
   width: 100%;
   margin-bottom: 30px;
+}
+@media all and (min-width: 992px) {
+  .menu__type {
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+@media all and (min-width: 768px) and (max-width: 992px) {
+  .menu__type {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .dish {
@@ -279,8 +314,13 @@ footer h1 {
 }
 @media all and (min-width: 992px) {
   .dish {
-    width: 80%;
-    margin: 10px 10% 20px 10%;
+    width: 90%;
+    margin-bottom: 20px;
+  }
+}
+@media all and (min-width: 768px) and (max-width: 992px) {
+  .dish {
+    width: 70%;
   }
 }
 .dish__infos {
@@ -363,6 +403,7 @@ footer h1 {
 @media all and (min-width: 992px) {
   .border {
     width: 100px;
+    margin-bottom: 40px;
   }
 }
 @media all and (min-width: 768px) and (max-width: 992px) {
