--- a/sass/Pages/_menus.scss
+++ b/sass/Pages/_menus.scss
@@ -28,21 +28,24 @@
 }
 
 .menu {
-    border-radius: 20px;
+    position: relative;
+    top :- 40px;
+    margin-bottom: -40px;
+    border-radius: 30px;
     background-color: $color-grey;
     display: flex;
     flex-direction: column;
     align-items:center;
     width: 100%;
-    margin-top: -20px;
     overflow: visible;
     padding: 20px;
     padding-bottom: 100px;
     @include desktop {
-        width: 80%;
+        width: 90%;
         margin: auto;
-        margin-top: 50px;
+        margin-top: 90px;
         margin-bottom : 50px;
+        padding-top:50px;
         @include shadow_grey;
     }
     &__title {
@@ -52,6 +55,9 @@
         justify-content: space-between;
         align-items: baseline;
         margin-bottom: 30px;
+        @include desktop {
+            width: 90%;
+        }
         &__heart {
             font-size: 30px;
             margin-left: 10px;
@@ -72,9 +78,30 @@
             align-items: center;
         }
     }
+    &__types {
+        width: 100%;
+        @include desktop {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            margin-top: 40px;
+            margin-bottom: 40px;
+        }
+    }
     &__type {
         width: 100%;
         margin-bottom: 30px;
+        @include desktop {
+            width: 30%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        @include tablet {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
     }
 }
 
@@ -92,8 +119,11 @@
     animation : menu-apparition $apparition-duration;
     @include shadow_grey;
     @include desktop {
-        width: 80%;
-        margin: 10px 10% 20px 10%;
+        width: 90%;
+        margin-bottom: 20px;
+    }
+    @include tablet {
+        width: 70%;
     }
     &__infos {
         display: flex;
@@ -175,6 +205,7 @@
     margin: 6px 0 15px 0;
     @include desktop {
         width: 100px;
+        margin-bottom: 40px;
     }
     @include tablet {
         width: 100px;
